docs: update migration guide to reflect removal of old style import paths and emphasize migration to new theme package

--- a/packages/theme/src/styles/index.less
+++ b/packages/theme/src/styles/index.less
@@ -21,5 +21,6 @@
 @import './components/mermaid.less';
 @import './components/math.less';
 @import './components/footnotes.less';
+@import './components/html-element.less';
 @import './components/default.less';
 
