feat: add Svelte integration with new components, stores, and documentation for Incremark

--- a/packages/theme/src/styles/index.less
+++ b/packages/theme/src/styles/index.less
@@ -22,5 +22,6 @@
 @import './components/math.less';
 @import './components/footnotes.less';
 @import './components/html-element.less';
+@import './components/auto-scroll-container.less';
 @import './components/default.less';
 
